load("@aspect_rules_jasmine//jasmine:defs.bzl", "jasmine_test")
load("@aspect_rules_ts//ts:defs.bzl", "ts_config", "ts_project")

ts_config(
    name = "tsconfig",
    src = "tsconfig.json",
    deps = [
        "//:tsconfig",
        "//server:tsconfig",
    ],
)

ts_project(
    name = "tests",
    srcs = glob(["*.ts"]),
    declaration = True,
    source_map = True,
    tsconfig = ":tsconfig",
    deps = [
        "//:node_modules/@types/jasmine",
        "//:node_modules/rxjs",
        "//server/src",
    ],
)

jasmine_test(
    name = "test",
    args = ["*_spec.js"],
    chdir = package_name(),
    data = [
        ":tests",
        "//integration/pre_apf_project",
        "//integration/pre_apf_project:node_modules/@angular/compiler",
        "//integration/pre_apf_project:node_modules/@angular/compiler-cli",
        "//integration/workspace",
        "//integration/workspace:node_modules/@angular/compiler",
        "//integration/workspace:node_modules/@angular/compiler-cli",
    ],
    node_modules = "//:node_modules",
    tags = ["unit_test"],
)
